[gd_scene load_steps=9 format=3 uid="uid://da0fvtsdf5ri6"]

[ext_resource type="Script" uid="uid://b8snaq1bsge2f" path="res://scripts/mission/MissionSelect.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://y1akstmn6odh" path="res://assets/sprites/ui/starfield.png" id="3_starfield"]
[ext_resource type="Theme" uid="uid://blueprint_theme" path="res://assets/themes/blueprint_theme.tres" id="4_blueprint_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mission_button_normal"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.15, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.290196, 0.886275, 0.886275, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mission_button_hover"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.15, 0.2, 0.25, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.290196, 0.886275, 0.886275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mission_button_disabled"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.15, 0.15, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_back_button_normal"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.6, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.886275, 0.290196, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_back_button_hover"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.7, 0.25, 0.25, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.886275, 0.290196, 0.290196, 1)

[node name="MissionSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_blueprint_theme")
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_starfield")
expand_mode = 1
stretch_mode = 1

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 40.0
offset_right = 300.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 12
text = "OPERATION SELECT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 60.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 42
text = "MISSION SELECT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MissionButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Mission1Button" type="Button" parent="MissionButtons"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_mission_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_mission_button_hover")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mission_button_disabled")
text = "PATROL DUTY"

[node name="Mission2Button" type="Button" parent="MissionButtons"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_mission_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_mission_button_hover")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mission_button_disabled")
text = "CONVOY DEFENSE"

[node name="Mission3Button" type="Button" parent="MissionButtons"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_mission_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_mission_button_hover")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mission_button_disabled")
text = "FLEET BATTLE"

[node name="BriefPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 210.0
offset_right = 200.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2

[node name="BriefLabel" type="Label" parent="BriefPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Mission brief appears here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 1017.0
offset_right = 120.0
offset_bottom = 1057.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_back_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_back_button_hover")
text = "EXIT"
